# Github-Agent

./: .env.example  .gitignore  Dockerfile  Issues.md  LICENSE  README.md  TODO.md  connecting.ipynb  docker-compose.yml  langgraph.json  lmsystems.py  pyproject.toml  setup.py
Langchain-Academy/: connecting.ipynb  creating.ipynb
api/: access.py  run-api.py
py-testing/: remotegraph-test.py
src/langgraph_eng_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/langgraph_engineer/: agent.py  aider_node.py  configuration.py  critique.py  diff_node.py  git_push_node.py  interactive_aider.py  model.py  post_critique_router.py  react_agent.py  route_message.py  setup_node.py  state.py  summarize.py  summarize_node.py  test_run.py  tools.py  verify_branch.py
src/langgraph_engineer/unused-files/: gather_requirements.py  router_agent.py
